[gd_scene load_steps=8 format=3 uid="uid://do606bn2pxfhe"]

[ext_resource type="Script" uid="uid://kbc1kcden74m" path="res://Scenes/run/run.gd" id="1_5fep7"]
[ext_resource type="PackedScene" uid="uid://dive6reu3x5ta" path="res://Scenes/map/map.tscn" id="1_j0p6t"]
[ext_resource type="Resource" uid="uid://u3sa2j38l167" path="res://Scenes/run/run_startup.tres" id="2_she2k"]
[ext_resource type="PackedScene" uid="uid://wwwcd6qu3uhp" path="res://Scenes/ui/card_pile_oprner.tscn" id="4_itd58"]
[ext_resource type="PackedScene" uid="uid://c7dn2xv1wvtx3" path="res://Scenes/ui/gold_ui.tscn" id="4_yuyfb"]
[ext_resource type="Texture2D" uid="uid://blapa86ghly1k" path="res://art/deck.png" id="5_smnto"]
[ext_resource type="PackedScene" uid="uid://cpqvsmb8wcs5p" path="res://Scenes/ui/card_pile_view.tscn" id="6_smnto"]

[node name="Run" type="Node"]
script = ExtResource("1_5fep7")
run_startup = ExtResource("2_she2k")

[node name="Map" parent="." instance=ExtResource("1_j0p6t")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 13)
layout_mode = 2
text = "Map"

[node name="ButtleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 13)
layout_mode = 2
text = "Buttle"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 13)
layout_mode = 2
text = "Treasure"

[node name="RewardsButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 13)
layout_mode = 2
text = "Rewards"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 13)
layout_mode = 2
text = "Shop"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 13)
layout_mode = 2
text = "Campfire"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.517647)

[node name="BarItems" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2

[node name="GoldUI" parent="TopBar/BarItems" instance=ExtResource("4_yuyfb")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlaceHodler" type="Control" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckBotten" parent="TopBar/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_itd58")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("5_smnto")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="TopBar/BarItems/DeckBotten"]
layout_mode = 0
offset_left = -5.0
offset_top = 11.0
offset_right = 5.0
offset_bottom = 17.0
text = "99"

[node name="DeckView" parent="TopBar" instance=ExtResource("6_smnto")]
unique_name_in_owner = true
visible = false
